fix error on server.js
